0.02
 - Add Graph::Reader::TGF to SEE ALSO section in doc.
 - Fix LICENSE file.
 - Update Module::Install to 1.08 version.

0.01 2013-11-10
 - First version.