@@ -64,6 +64,9 @@ EXAMPLE1
      # Get graph from file.
      my $g = $obj->read_graph($tempfile);
 
+     # Clean temporary file.
+     unlink $tempfile;
+
      # Print to output.
      print $g."\n";
 
